--- a/src/main/java/ua/edu/ukma/fido/front/loginpage.html
+++ b/src/main/java/ua/edu/ukma/fido/front/loginpage.html
@@ -13,14 +13,15 @@
 <body>
     <div class="container">
         <form action="action_page.php" method="post">
-            <!--<div class="imgcontainer">
-          <img src="img_avatar2.png" alt="Avatar" class="avatar">
-        </div>
-      -->
-            <label for="uname"><b>Username</b></label>
+            <div class="imgcontainer">
+                <figure>
+                <img src="boxLogo.png" alt="Logo" class="logo">
+                <figcaption>qSklad</figcaption></figure>
+            </div>
+            <label><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="uname" required>
 
-            <label for="psw"><b>Password</b></label>
+            <label><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
 
             <button type="submit">Login</button>
